# personal-playground

./: LICENSE.md  README.md
cmake-basic/: CMakeLists.txt
cmake-basic/include/armadillo_bits/: config.hpp
cmake-basic/src/: test_class_one.cc
cmake-sample-basic/: CMakeLists.txt  README.md
cmake-sample-basic/lib/: libarmadillo.so.8  libarmadillo.so.8.300.1
cmake-sample-basic/src/: program1.cc  program2.cc  test_class_one.cc  test_class_one.h  test_class_two.cc  test_class_two.h
code-interviews/blueyonder/: README.md
golang/basic-tutorial/greetings/: greetings.go  greetings_test.go
golang/basic-tutorial/hello/: hello.go
k8s-nginx-letsencrypt/: README.md  ingress-tls.yaml  kube-lego-configmap.yaml  namespace.yaml  nginx-ingress-tls.yaml  nginx.yaml  service.yaml
kube-proxy-with-cert/: README.md
kube-proxy-with-cert/aspnetapp/: Dockerfile  Startup.cs  aspnetapp.csproj
kubernetes/nginx-letsencrypt/: kube-lego-configmap.yaml  nginx-deployment.yaml  nginx-service.yaml
makefiles/: Makefile  README.md
makefiles/src/: program1.cc  program2.cc  test_class_one.h  test_class_two.h
nginx-proxy-dotnet/: README.md  docker-compose.yml  kubernetes.yml
nginx-proxy-dotnet/app/: .gitignore  Startup.cs  app.sln
nginx-proxy-dotnet/aspnetapp/: Dockerfile  Program.cs  Startup.cs  aspnetapp.csproj  aspnetapp.sln
nginx-proxy-dotnet/certificates/: localhost.key
nginx-proxy-dotnet/kube/: kube-lego-configmap.yaml  kube-lego-deployment.yaml  nginx-deployment.yaml  nginx-ingress.yaml  nginx-service.yaml
nginx-proxy-dotnet/nginx/: Dockerfile  nginx.conf  nginx.tmpl
(+2 files in other folders)
